capsul/apps_qt: create a button to configure the study.
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@64 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/capsul/apps_qt/resources/icones.qrc
+++ b/capsul/apps_qt/resources/icones.qrc
@@ -7,7 +7,7 @@
         <file alias="delete">delete.png</file>
         <file alias="controller">controller.png</file>  
         <file alias="add">add.png</file>
-        <file alias="search">search.png</file>
-        <file alias="change_view">change_view.png</file>        
+        <file alias="change_view">change_view.png</file>
+        <file alias="config">config.png</file>            
     </qresource>
 </RCC>
