--- a/capsul/apps_qt/resources/pipeline_viewer.ui
+++ b/capsul/apps_qt/resources/pipeline_viewer.ui
@@ -93,6 +93,23 @@
          </widget>
         </item>
         <item>
+         <widget class="QToolButton" name="study_config">
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="icones.qrc">
+            <normaloff>:/icones/config</normaloff>:/icones/config</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>24</width>
+            <height>24</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QToolButton" name="change_view">
           <property name="text">
            <string>...</string>
