capsul/apps_qt: add result board.
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@114 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/capsul/apps_qt/resources/icones.qrc
+++ b/capsul/apps_qt/resources/icones.qrc
@@ -8,6 +8,7 @@
         <file alias="controller">controller.png</file>  
         <file alias="add">add.png</file>
         <file alias="change_view">change_view.png</file>
-        <file alias="config">config.png</file>            
+        <file alias="config">config.png</file>
+        <file alias="view_result">view_result.png</file>          
     </qresource>
 </RCC>
