--- a/capsul/apps_qt/resources/pipeline_viewer.ui
+++ b/capsul/apps_qt/resources/pipeline_viewer.ui
@@ -144,6 +144,23 @@
          </widget>
         </item>
         <item>
+         <widget class="QToolButton" name="view_result">
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset resource="icones.qrc">
+            <normaloff>:/icones/view_result</normaloff>:/icones/view_result</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>24</width>
+            <height>24</height>
+           </size>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
