--- a/capsul/apps_qt/resources/capsul.ui
+++ b/capsul/apps_qt/resources/capsul.ui
@@ -35,7 +35,7 @@
      <number>0</number>
     </property>
     <item row="0" column="0">
-     <widget class="QTableWidget" name="display"/>
+     <widget class="QTabWidget" name="display"/>
     </item>
    </layout>
   </widget>
@@ -217,6 +217,9 @@
    </property>
   </action>
   <action name="actionLoad">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="icones.qrc">
      <normaloff>:/icones/open</normaloff>:/icones/open</iconset>
