qt: move old or wip qt_gui qt_apps in the wip module.
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@221 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/capsul/wip/apps_qt/resources/icones.qrc
+++ b/capsul/wip/apps_qt/resources/icones.qrc
@@ -13,6 +13,8 @@
         <file alias="open">transfer.png</file>
         <file alias="exit">exit.png</file> 
         <file alias="browse">open.png</file>
-        <file alias="config">config.png</file>                  
+        <file alias="config">config.png</file>
+        <file alias="nav_down">nav_down.png</file>
+        <file alias="nav_right">nav_right.png</file>               
     </qresource>
 </RCC>
