capsul/qt_apps/main_window: enalbe / disable the run button according to the controller widget valid status.
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@245 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/capsul/qt_apps/resources/capsul.ui
+++ b/capsul/qt_apps/resources/capsul.ui
@@ -274,6 +274,9 @@
    </property>
   </action>
   <action name="actionRun">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="icon">
     <iconset resource="icones.qrc">
      <normaloff>:/icones/play</normaloff>:/icones/play</iconset>
