capsul/qt_apps/resources/capsul: set minimum height in parameter dock widget.
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@264 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/capsul/qt_apps/resources/capsul.ui
+++ b/capsul/qt_apps/resources/capsul.ui
@@ -187,6 +187,12 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="dockWidgetParameters">
+   <property name="minimumSize">
+    <size>
+     <width>56</width>
+     <height>200</height>
+    </size>
+   </property>
    <property name="features">
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
