* moved controller to soma-base (as it used to be) * moved some icons needed in qu_gui to qt_gui instead of qt_apps * made a binary resource file (.rcc) to make it usable both through PyQt and PySide - pyside-rcc makes python files wich are incompatible with PyQt * a few modifs in Int and Float controller widgets to make them work with PyQt API v1 (useful for IPython)
git-svn-id: https://bioproj.extra.cea.fr/svn/capsul/trunk@333 89a606c0-f330-4fd0-a228-5aafc7605a1d

--- a/capsul/qt_apps/resources/icones.qrc
+++ b/capsul/qt_apps/resources/icones.qrc
@@ -4,8 +4,8 @@
         <file alias="help">help.png</file>
         <file alias="logo">logo.png</file>
         <file alias="play">play.png</file>    
-        <file alias="delete">delete.png</file> 
-        <file alias="add">add.png</file>
+        <file alias="delete">../../qt_gui/resources/widgets_icons/delete.png</file>
+        <file alias="add">../../qt_gui/resources/widgets_icons/add.png</file>
         <file alias="change_view">change_view.png</file>
         <file alias="controller">controller.png</file>
         <file alias="view">inspect.png</file>
@@ -14,7 +14,7 @@
         <file alias="exit">exit.png</file> 
         <file alias="browse">open.png</file>
         <file alias="config">config.png</file>
-        <file alias="nav_down">nav_down.png</file>
-        <file alias="nav_right">nav_right.png</file>               
+        <file alias="nav_down">../../qt_gui/resources/widgets_icons/nav_down.png</file>
+        <file alias="nav_right">../../qt_gui/resources/widgets_icons/nav_right.png</file>
     </qresource>
 </RCC>
