--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -4,12 +4,13 @@
 /* -- page layout ----------------------------------------------------------- */
 
 body {
-    background-color: #8E1731;
+    background-color: #651022;
     color: #FFFBBB;
+    background-image: linear-gradient(#651022, #8E1731);
 }
 
 div.document {
-    background-color: #203060;
+    background-color: #651022;
 }
 
 div.related {
@@ -23,6 +24,18 @@ div.sphinxsidebar input {
 div.body {
     background-color: #FFF0F0;
 }
+
+/*div.footer {
+    background-color: #651022;
+}*/
+
+/*div.documentwrapper {
+    background-color: #8E1731;
+}*/
+
+/*div.container {
+    background-color: #791328;
+}*/
 
 /* -- hyperlink styles ------------------------------------------------------ */
 
@@ -153,7 +166,7 @@ div.navbar a {
 
 .navbar .btn, .navbar .open > .btn, .navbar .btn:hover {
     display: inline-block;
-    padding: 4px 12px;
+    padding: 4px 12px 5px 12px;
     margin-bottom: 0;
     font-size: 14px;
     line-height: 20px;
