--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -14,7 +14,7 @@ div.document {
 }
 
 div.related {
-    background-color: #102050;
+    background-color: #502010;
 }
 
 div.sphinxsidebar input {
@@ -161,6 +161,7 @@ div.navbar a {
     margin: 0;
     height: 100%;
     overflow-wrap: break-word;
+    display: inline;
     font-size: 16px;
 }
 
@@ -181,7 +182,7 @@ div.navbar a {
 }
 
 .btn-group .dropdown-toggle {
-    vertical-align: top;
+    vertical-align: middle;
     color: #808080;
     border-color: #808080;
 }
@@ -248,4 +249,12 @@ pre {
     border-left: none;
     border-right: none;
     border-radius: 0px;
+}
+
+div.sphinxsidebar a {
+    color: #FFFBBB;
+}
+
+code {
+    color: #A3562C;
 }
