--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -258,3 +258,10 @@ div.sphinxsidebar a {
 code {
     color: #A3562C;
 }
+
+.section.section h4 {
+    background-color: #fff0f0;
+    font-size: 100%;
+    margin: 0px;
+    border: 0px;
+}
