distinguish between output File traits which filename is an input from those which filename is an output
emphasized and documented the "input_filename" property on traits, and set a different color on plugs when the filename is an output in PipelineDevelopperView.

--- a/doc/source/_static/custom.css
+++ b/doc/source/_static/custom.css
@@ -256,7 +256,8 @@ div.sphinxsidebar a {
 }
 
 code {
-    color: #A3562C;
+    color: #804020;
+/*     color: #A3562C; */
 }
 
 .section.section h4 {
