#238 avoid errors in browser due to "cors" security

--- a/capsul/web/templates/dashboard.html
+++ b/capsul/web/templates/dashboard.html
@@ -27,8 +27,9 @@
 {% block script %}
 <script>
   document.getElementById("button").addEventListener("click", (event) => {
+      const input_value = document.getElementById("input").value;
       backend.print("clicked");
-      backend.hello(document.getElementById("input").value,
+      backend.hello(input_value,
         function (value) {
           document.getElementById("result").innerText = value;
         });
