--- a/capsul/ui/templates/layout.html
+++ b/capsul/ui/templates/layout.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{title or 'Capsul'}}</title>
-  <link rel="icon" href="{{base_url}}/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="{{base_url}}/static/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="{{base_url}}/static/capsul.css">
+  <script>const backend_ready = new CustomEvent('backend_ready');</script>
 {%- if server_type=='qt' %}
   <script type="text/javascript" src="qrc:///qtwebchannel/qwebchannel.js"></script>
   <script type="text/javascript" src="{{base_url}}/qt_backend.js"></script>
